--- a/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
+++ b/src/content/technotes/TN0007-testing-with-apollo-federation.mdx
@@ -92,7 +92,7 @@ Follow these best practices when creating end-to-end tests for your supergraph:
 Composition testing is specific to a federated architecture. It involves testing that your subgraph schemas successfully [compose into a supergraph schema](/federation/federated-types/composition/) that can resolve the operations sent by clients. You perform these tests with the [Rover CLI](/rover/), via the [`rover subgraph check`](/rover/commands/subgraphs#subgraph-check) command. We recommend performing this check in your CI pipeline as part of code-reviews and in your CD pipeline to confirm the changes you are about to deploy are still valid since the last time you ran the check.
 
 ## Component and operation testing
-Fortunately, clients are not actually aware of when they are using a Federated GraphQL API vs a non-Federated one so the testing best practices remain the same. Our schema can provide a convinient layer to [mock our data fetching](https://www.apollographql.com/docs/react/development-testing/client-schema-mocking/), or for indivual components you can mock the specific client providers that inject or fetch your GraphQL data:
+Fortunately, clients are not actually aware of when they are using a Federated GraphQL API vs a non-Federated one so the testing best practices remain the same. Our schema can provide a convenient layer to [mock our data fetching](https://www.apollographql.com/docs/react/development-testing/client-schema-mocking/), or for indivual components you can mock the specific client providers that inject or fetch your GraphQL data:
   - [Apollo Client React `MockProvider`](https://www.apollographql.com/docs/react/development-testing/testing/)
   - [Apollo Client iOS Test Mocks](https://www.apollographql.com/docs/ios/testing/test-mocks)
   - [Apollo Client Kotlin Test Tools](https://www.apollographql.com/docs/kotlin/testing/overview)
