--- a/src/content/graphos/explorer/scripting.mdx
+++ b/src/content/graphos/explorer/scripting.mdx
@@ -6,20 +6,16 @@ Scripts can also be useful for debugging purposes.
 
 There are two places in the Explorer to write these scripts:
 
-- Global Preflight Script
+#### Preflight Script
 
-  - This script is identical for every team member that uses the Explorer with a particular variant. Global preflight scripts are especially useful for managing authentication flows like OAuth, for example by refreshing an access token.
-  - The global preflight script applies to a _single variant_ of a particular graph, so you can define different ones for each of your graph's environments.
+- It may be helpful to think of this as the global or parent preflight script,
+  since as long as the feature is turned on in the settings it will always execute before any other script or operation
+- This script is identical for every team member that uses the Explorer with a particular variant. Global preflight scripts are especially useful for managing authentication flows like OAuth, for example by refreshing an access token.
+- The global preflight script applies to a _single variant_ of a particular graph, so you can define different ones for each of your graph's environments.
 
-- Operation Level Scripts
+#### Operation Scripts
 
-  - Each operation in an [operation collection] can define a preflight script which executes before the operation runs.
-
-Execution order:
-
-Global preflight script -> operation script -> operation
-
-_note_: Scripts can reference and run other saved operations which may also define their own scripts creating a chain of preflight script execution.
+- Each operation in an [Operation collection](./operation-collections/) can define a script which executes before the operation runs.
 
 #### ⚠️ Important considerations for preflight scripts
 
@@ -29,10 +25,12 @@ _note_: Scripts can reference and run other saved operations which may also defi
 - Preflight scripts are stored in the Apollo cloud in plaintext.
   - **Do not include secret credentials in preflight scripts!** Instead, team members can provide their individual credentials in the Explorer via [environment variables](#environment-variables).
 - Team members can [disable](#disabling-preflight-scripts) the execution of a preflight script.
+- Scripts can use the `explorer.runOperation` method to execute other saved operations which may also define their own scripts
+  creating a chain of script & operation execution.
 
-#### Creating a global preflight script
+#### Creating a preflight script
 
-To create a global preflight script:
+To create a preflight script:
 
 1. [Open Apollo Studio](https://studio.apollographql.com/) and then open the Explorer for the graph and variant you want to create a script for.
 
@@ -128,10 +126,17 @@ Network requests are initiated from an origin of `https://preflight-request.apol
 
 ##### `explorer.runOperation`
 
-`(href: string, options?: { method?: string, body?: string | null, headers?: Record<string, string>, credentials: 'include' | 'omit' | 'same-origin' }) => Promise<{ code: number, body: string, json: () => any }>`
+`(options: { scope?: 'personal' | 'shared' | 'sandbox'; graphRef?: string | null; collectionName: string; operationName: string; headers?: Record<string, string>; variables?: JSONObject; }) => Promise<{ result: ExecutionResult<JSONObject> | undefined; code: number; }>`
 
 </td>
 <td>
+
+Function for executing other saved operations. If the target operation has defined its own script, it will run before its operation.
+
+Note about parameters:
+
+- If scope is undefined, graphRef is required
+- f graphRef is undefined, scope is required
 
 </td>
 </tr>
@@ -204,3 +209,4 @@ Operation scripts are only available on operations that are saved in a [collecti
 2. Select the Script tab and press the + Add Script button
 
 -- figure out how to explain that the rest of the steps are the same --
+If scripts accidentally reference each other creating circular depedency, the Explorer will try a few more times in case ther is script logic that
