header for hbars for vars

--- a/src/content/graphos/explorer/scripting.mdx
+++ b/src/content/graphos/explorer/scripting.mdx
@@ -228,3 +228,5 @@ Operation scripts are only available on operations that are saved in a [collecti
 
 -- figure out how to explain that the rest of the steps are the same --
 If scripts accidentally reference each other creating circular depedency, the Explorer will try a few more times in case ther is script logic that
+
+### Handlebar syntax in the variables editor
