--- a/src/content/graphos/explorer/scripting.mdx
+++ b/src/content/graphos/explorer/scripting.mdx
@@ -237,6 +237,17 @@ Operation scripts are only available on operations that are saved in a [collecti
 
 For guidance on using this modal, refer to the section "Creating a Preflight Script".
 
+**Double check that this toggle is in the desired position**
+
+Found in the Explorer settings:
+
+<img
+  class="screenshot"
+  src="../img/op-switch.png"
+  alt="Editing operation scripts in the Explorer"
+  width="600"
+/>
+
 #### Handlebars in the Variables Pane
 
 It is possible to use handlebars to evaluate environment variables. Consider the following setup:
