more feedback changes

--- a/src/content/graphos/explorer/connecting-authenticating.mdx
+++ b/src/content/graphos/explorer/connecting-authenticating.mdx
@@ -318,7 +318,7 @@ Operation scripts are only available on operations that are saved in a [collecti
      width="600"
    />
 
-For guidance on using this modal, refer to the section "Creating a Preflight Script".
+For guidance on using this modal, refer to the section [Creating a Preflight Script](#creating-a-preflight-script).
 
 **Double check that this toggle is in the desired position**
 
@@ -338,7 +338,8 @@ It is possible to use handlebars to evaluate environment variables. Consider the
 <img
   class="screenshot"
   src="../img/handlebars-1.png"
-  alt="Using handlebars in the variables pane"
+  alt="An example of how to use handlebars in the variables pane. The name of our environment variable is wrapped with two enclosing curly braces on either side, all inside a string. 
+  Assuming the environment variable has been populated and we use its name within the handlbars it will be interpolated to the desired value during the operation."
   width="600"
 />
 
