--- a/src/content/technotes/TN0032-sdui-and-graphql.mdx
+++ b/src/content/technotes/TN0032-sdui-and-graphql.mdx
@@ -17,7 +17,7 @@ Instead, if your API returned exactly what was displayed on the screen you could
 
 SDUI is not a framework to be implemented but a design pattern that can be implemented in many different ways while still following the same core principles. You could have just a few parts of the app controlled from the server, like text or if certain elements should be hidden. It could then advance to more parts like changing theming or component features from the API, all the way to having a generic layout that could render any UI component in any order.
 
-Take for example this mock e-commerce schema which allows us to display a list of featured products:
+Take for example this mock ecommerce schema which allows us to display a list of featured products:
 
 ```graphql
 type Product @key(fields: "id") {
