--- a/src/content/technotes/TN0032-sdui-and-graphql.mdx
+++ b/src/content/technotes/TN0032-sdui-and-graphql.mdx
@@ -13,7 +13,7 @@ When building a graph with server-driven UI, it’s often desirable to converge 
 
 The primary need for SDUI comes from mobile native-app development. These platforms require shipping versions of your client-side app to a store that usually has a lengthy review process before a new version gets published. Then, even after a new version of the app is released, users have to update their versions from the store to start using or experiencing the new features.
 
-Instead, if your API returned exactly what was displayed on the screen you could control when different UI elements or texts were displayed or even change it based on any number of inputs sent to the API without requiring any app update.
+Instead, if your API returned exactly what was displayed on the screen you could control when different UI elements or text are displayed. Changes can also be made to the inputs sent to the API without requiring any app updates.
 
 SDUI is not a framework to be implemented but a design pattern that can be implemented in many different ways while still following the same core principles. You could have just a few parts of the app controlled from the server, like text or if certain elements should be hidden. It could then advance to more parts like changing theming or component features from the API, all the way to having a generic layout that could render any UI component in any order.
 
