--- a/src/content/technotes/TN0032-sdui-and-graphql.mdx
+++ b/src/content/technotes/TN0032-sdui-and-graphql.mdx
@@ -94,4 +94,4 @@ if (!component) { throw new Error('Unknown Type Returned!'); }
 renderComponet(component, data);
 ```
 
-This means that now from the API response you can dynamically choose when to render different components or start displaying different components based on any of our API inputs, including headers or user information.
+This means that from the API response you can dynamically choose when to render different components or start displaying different components based on any of our API inputs, including headers or user information.
