Add a page on GraphOS subgraph security

--- a/src/content/graphos/graphs/creating-a-subgraph.mdx
+++ b/src/content/graphos/graphs/creating-a-subgraph.mdx
@@ -54,3 +54,5 @@ When you're ready to add a new subgraph to your existing GraphOS supergraph, do 
 3. Set up your CI/CD pipeline to perform checks and also [publish your subgraph schema](../schema/cli-registration).
 
 After you publish your subgraph's schema for the first time, GraphOS recognizes it as part of your supergraph, and you can start querying for data from _all_ of your subgraphs!
+
+> ⚠️ Make sure you [secure your subgraph](./securing-a-subgraph) so that only GraphOS can query it.
