--- a/src/content/technotes/TN0032-sdui-and-graphql.mdx
+++ b/src/content/technotes/TN0032-sdui-and-graphql.mdx
@@ -7,6 +7,8 @@ tags: [schema design, server-driven ui]
 
 Server-Driven UI (SDUI) reduces client-side logic and provides consistency across client platforms (web/iOS/Android/etc) by returning UI data from an API instead of domain data. This approach is geared toward use cases where collaboration between front-end and back-end teams is possible and there is a strong desire to build a cohesive experience across multiple teams and organizations.
 
+When building a graph with server-driven UI, it’s often desirable to converge the schema with the design language being used by client teams. In practice, this requires a definitive design system and a well-defined collection of components to use on the front end to render views.
+
 ## Motivations
 
 The primary need for SDUI comes from mobile native-app development. These platforms require shipping versions of your client-side app to a store that usually has a lengthy review process before a new version gets published. Then, even after a new version of the app is released, users have to update their versions from the store to start using or experiencing the new features.
