--- a/src/content/graphos/schema/cli-registration.mdx
+++ b/src/content/graphos/schema/cli-registration.mdx
@@ -16,7 +16,7 @@ Whenever you make changes to a graph's schema, you should **publish** those chan
 Every supergraph in Apollo Studio includes one or more subgraphs. You _individually_ publish each subgraph's schema to Apollo with `rover subgraph publish`:
 
 ```bash
-rover subgraph publish --schema ./products.graphql --name products docs-example-graph@current
+rover subgraph publish --schema ./products.graphql --name products docs-example-graph@current --routing-url https://products.example.com
 ```
 
 ```mermaid
