--- a/src/content/graphos/schema/cli-registration.mdx
+++ b/src/content/graphos/schema/cli-registration.mdx
@@ -115,7 +115,8 @@ jobs:
           if [ "${CIRCLE_BRANCH}" == "main" ]; then
             rover subgraph publish my-graph@my-variant \
               --schema ./schema.graphql \
-              --name locations
+              --name locations \
+              --routing-url https://products.example.com
           fi
       # highlight-end
 ```
